0.03
 - Rewrite SEE ALSO section to new style.

0.02 2015-03-12T21:20:54+01:00
 - Add <?xml> header to XML document.
 - Add Map::Tube::Graph to SEE ALSO section in doc.
 - Add Map::Tube::Plugin::Graph to SEE ALSO section in doc.
 - Add Map::Tube::Singapore to SEE ALSO section in doc.
 - Add test of map validity.
 - Update META.yml and README files.
 - Update copyright years to 2015.

0.01 2014-12-31T09:03:53+01:00
 - First version