@@ -1,5 +1,6 @@
 0.03
  - Rewrite SEE ALSO section to new style.
+ - Update Module::Install to 1.16 version.
 
 0.02 2015-03-12T21:20:54+01:00
  - Add <?xml> header to XML document.
